--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-plus": "^2.3.2",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vxe-table": "^4.3.11",
+    "xe-utils": "^3.5.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
